--- a/themes/the-black-circle/assets/sass/hero.scss
+++ b/themes/the-black-circle/assets/sass/hero.scss
@@ -48,6 +48,7 @@
     background-position: center center;
     background-repeat: no-repeat;
 
+    
     &:before {
         height: 100%;
         width: 100%;
@@ -58,10 +59,23 @@
         background: linear-gradient(250deg, #000 1.55%, rgba(0, 0, 0, 0.00) 37.29%, rgba(0, 0, 0, 0.70) 55.3%, rgba(0, 0, 0, 0.00) 76.63%), linear-gradient(0deg, rgba(0, 0, 0, 0.75) 0%, rgba(0, 0, 0, 0.75) 100%);
         z-index: 0;
     }
+    
+    &.big-inner-hero-block { 
+        min-height: 675px;
+        background-position: top right;
+        &:before {
+        opacity: 0.3;
+        }
+    }
 
     .inner-hero-item { 
         position: relative;
         z-index: 1;
+        p {
+            line-height: 28px;
+            letter-spacing: 0.32px;
+            font-weight: $font-weight-light;
+        }
     }
 }
 
